Add NVIDIA GPU passive health checks (#2952)
* shim: Integrate libdcgm, add a new endpoint returning overall GPU
  health with list of incidents.
* Periodically pull instance health from shim, store the raw
  response in a new DB table. Infer overall instance health and
  store it in a new column of the "instances" table.
* Don't consider failed instances for submitted jobs. Note: instances
  with warnings are still considered for jobs.
* API: add a new method returning a list of instance health checks
  with unified structure.
* CLI: display "warning" and "failure" health statuses in the same way
  as "unreachable", below the instance status.

Closes: https://github.com/dstackai/dstack/issues/2930
