# runner/internal/shim/api/handlers.go
@@ -21,6 +21,20 @@ func (s *ShimServer) HealthcheckHandler(w http.ResponseWriter, r *http.Request) 
 	}, nil
 }
 
+func (s *ShimServer) InstanceHealthHandler(w http.ResponseWriter, r *http.Request) (interface{}, error) {
+	ctx := r.Context()
+	response := InstanceHealthResponse{}
+	if s.dcgmWrapper != nil {
+		if dcgmHealth, err := s.dcgmWrapper.GetHealth(); err != nil {
+			log.Error(ctx, "failed to get health from DCGM", "err", err)
+		} else {
+			response.DCGM = &dcgmHealth
+		}
+	}
+
+	return &response, nil
+}
+
 func (s *ShimServer) TaskListHandler(w http.ResponseWriter, r *http.Request) (interface{}, error) {
 	return &TaskListResponse{IDs: s.runner.TaskIDs()}, nil
 }
